@@ -29,7 +29,7 @@ import java.time.format.DateTimeFormatter
 /**
  * @author <a href="mailto:franz.wilhelmstoetter@gmail.com">Franz Wilhelmstötter</a>
  * @since 1.2
- * @version 4.3
+ * @version !__version__!
  */
 rootProject.version = Version.parse(property('jenetics.Version'))
 
@@ -60,38 +60,79 @@ allprojects {
 
 subprojects { Project prj ->
 	prj.plugins.apply(SetupPlugin.class)
+
+	// The Javadoc doesn't work for
+	//     openjdk version "11.0.2" 2018-10-16
+	//     OpenJDK Runtime Environment 18.9 (build 11.0.2+7)
+	//     OpenJDK 64-Bit Server VM 18.9 (build 11.0.2+7, mixed mode
+	if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+		prj.tasks.withType(Javadoc).all {
+			enabled = false
+		}
+	}
+
 }
 
 allprojects { Project prj ->
+	repositories {
+		mavenCentral()
+		jcenter()
+	}
+
 	if (prj.plugins.hasPlugin('java')) {
 		sourceCompatibility = javaVersion
 		targetCompatibility = javaVersion
 	}
+	if (prj.plugins.hasPlugin('jacoco')) {
+		prj.jacoco {
+			toolVersion = '0.8.2'
+		}
+	}
 }
 
-task wrapper(type: Wrapper) {
+task updateGradle(type: Wrapper) {
 	gradleVersion = project.property('build.GradleVersion')
 }
 
-task alljavadoc(type: Javadoc) {
-	options.encoding = 'UTF-8'
-	def jeneticsProjects = subprojects.findAll { project ->
-		project.name.startsWith('jenetics') &&
-		project.name != 'jenetics.doc'
-	}
-	configure(jeneticsProjects) {
-		apply plugin: 'java'
-	}
+rootProject.gradle.projectsEvaluated {
+	def PROJECTS = [
+		"jenetics",
+		"jenetics.ext",
+		"jenetics.prog",
+		"jenetics.xml"
+	]
 
-	source jeneticsProjects.collect { p ->
-		p.sourceSets.main.allJava
-	}
-	destinationDir = file("${buildDir}/alljavadoc")
+	final Set<Project> projects = project.subprojects
+		.findAll { prj -> PROJECTS.contains(prj.name) }
 
-	// Might need a classpath
-	classpath = files(jeneticsProjects.collect { project ->
-		project.sourceSets.main.compileClasspath
-	})
+	if (!projects.isEmpty()) {
+		rootProject.task('alljavadoc', type: Javadoc) {
+			description = 'Aggregates Javadoc API documentation of all subprojects.'
+			group = JavaBasePlugin.DOCUMENTATION_GROUP
+
+			source = projects.javadoc.source
+			exclude '**/internal/**'
+			destinationDir rootProject.file("$project.buildDir/docs/javadoc")
+			classpath = rootProject.files(projects.javadoc.classpath)
+			title = "${project.name} documentation"
+
+			options {
+				memberLevel = JavadocMemberLevel.PROTECTED
+				version = true
+				author = true
+				docEncoding = 'UTF-8'
+				charSet = 'UTF-8'
+				windowTitle = "${project.name} ${project.version}"
+				docTitle = "<h1>${project.name} ${project.version}</h1>"
+
+				tags 'apiNote:a:API Note:',
+					'implSpec:a:Implementation Requirements:',
+					'implNote:a:Implementation Note:'
+
+				links 'https://docs.oracle.com/javase/8/docs/api'
+			}
+		}
+	}
 }
 
 // Create a zip file from the export directory.
@@ -108,3 +149,78 @@ task zip(type: Zip) {
 		zip.renameTo(new File('build/package', zip.getName()))
 	}
 }
+
+
+subprojects { Project prj ->
+	def MODULES = [
+		"jenetics",
+		"jenetics.ext",
+		"jenetics.prog",
+		"jenetics.xml"
+	]
+
+	if (MODULES.contains(prj.name)) {
+		afterEvaluate {
+			repositories {
+				mavenCentral()
+				jcenter()
+			}
+
+			compileJava {
+				inputs.property("moduleName", moduleName)
+				doFirst {
+					options.compilerArgs = [
+						'--module-path', classpath.asPath,
+					]
+					classpath = files()
+				}
+			}
+
+			jar {
+				manifest {
+					attributes(
+						'Project': prj.name,
+						'Project-Version': prj.version,
+						'Built-By': System.properties['user.name'],
+						'Build-Timestamp': dateformat.format(now),
+						'Created-By': "Gradle ${gradle.gradleVersion}",
+						'Build-Jdk': "${System.properties['java.vm.name']} " +
+							"(${System.properties['java.vm.vendor']} " +
+							"${System.properties['java.vm.version']})",
+						'Build-OS': "${System.properties['os.name']} " +
+							"${System.properties['os.arch']} " +
+							"${System.properties['os.version']}"
+					)
+				}
+			}
+
+//			compileTestJava {
+//				inputs.property("moduleName", moduleName)
+//				doFirst {
+//					options.compilerArgs = [
+//						'--module-path', classpath.asPath,
+//						'--add-modules', 'org.testng,java.desktop,io.jenetics.prngine',
+//						'--add-reads', "$moduleName=org.testng,java.desktop,io.jenetics.prngine",
+//						'--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+//					]
+//					classpath = files()
+//				}
+//			}
+
+//			test {
+//				inputs.property("moduleName", moduleName)
+//				doFirst {
+//					jvmArgs = [
+//						'--module-path', classpath.asPath,
+//						'--add-modules', 'ALL-MODULE-PATH',
+//						'--add-reads', "$moduleName=org.testng,java.desktop,io.jenetics.prngine",
+//						'--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+//					]
+//					classpath = files()
+//				}
+//			}
+		}
+	}
+}
+
+
